# gooTeX

./: #config_json.readme#  #pyproject.toml#  .gitignore  .gitignore~  Extragalactic.bib  README.md  compileMyLatex.yml  config.example.json  config_json.readme  finalLatexWithLibrary.aux  finalLatexWithLibrary.bbl  finalLatexWithLibrary.blg  finalLatexWithLibrary.out  finalLatexWithLibrary.tex  pyproject.toml  service_account_json.readme  text2pdf.py  variables.sty  webappUrls
cloud/: #server_engine.py#  server_engine.py  server_engine.py~  setup_env.sh  setup_env.sh~  team_notes.html
src/gootex/: cli.py  gui.py
src/gootex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
