[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gootex"
version = "1.0.0"
description = "A Google Docs to LaTeX compilation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client",
    "google-auth"
]

[project.scripts]
gootex = "gootex.cli:compile_locally"
gootex-ui = "gootex.gui:run_gui"